--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,20 +1,38 @@
-<ion-tabs>
+<ion-tabs #tabs>
 
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1">
-      <ion-icon name="flash"></ion-icon>
-      <ion-label>Tab One</ion-label>
+
+    <ion-tab-button tab="time">
+      <ion-icon ios="ios-clock" md="md-clock"></ion-icon>
+      <ion-label>Schedules</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2">
-      <ion-icon name="apps"></ion-icon>
-      <ion-label>Tab Two</ion-label>
+    <ion-tab-button tab="learn">
+      <ion-icon ios="ios-book" md="md-book"></ion-icon>
+      <ion-label>Materials</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3">
-      <ion-icon name="send"></ion-icon>
-      <ion-label>Tab Three</ion-label>
+    <ion-tab-button tab="online">
+      <ion-icon  ios="ios-globe" md="md-globe"></ion-icon>
+      <ion-label>Join Class</ion-label>
     </ion-tab-button>
+
+    <ion-tab-button tab="discuss">
+      <ion-icon ios="ios-chatboxes" md="md-chatboxes"></ion-icon>
+      <ion-label>Dis. Board</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button tab="submit">
+      <ion-icon ios="ios-cloud-upload" md="md-cloud-upload"></ion-icon>
+      <ion-label>Submit Assi.</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button tab="grade">
+      <ion-icon ios="ios-trending-up" md="md-trending-up" ></ion-icon>
+      <ion-label>Grades</ion-label>
+    </ion-tab-button>
+
+
   </ion-tab-bar>
 
 </ion-tabs>
