--- a/src/app/online/online.page.html
+++ b/src/app/online/online.page.html
@@ -6,4 +6,31 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content>
+    <ion-card color="dark">
+        <ion-card-content>
+           <ion-card-title>Live Virtual Class  </ion-card-title>
+            <ion-card-subtitle> Join Unit 1 Virtual Class during Regular class times. </ion-card-subtitle>
+               <ion-button color="medium">join Virtual Class</ion-button>
+        </ion-card-content>
+    </ion-card>
+    <ion-card color="dark">
+        <ion-card-content>
+           <ion-card-title>3D Models on AR  </ion-card-title>
+            <ion-card-subtitle> Please Accept camera access to see some of the 3D models. </ion-card-subtitle>
+               <ion-button (click)="navigateToArObjects()" >Augmented Reality </ion-button>
+        </ion-card-content>
+    </ion-card>
+    <ion-card color="dark">
+        <ion-card-content>
+           <ion-card-title>Live Virtual Class  </ion-card-title>
+            <ion-card-subtitle> Join Unit 1 Virtual Class during Regular class times. </ion-card-subtitle>
+                <ion-button> Join Session</ion-button>
+        </ion-card-content>
+    </ion-card>
+
+
+
+
+
+</ion-content>
