platform android added, login page correction

--- a/src/app/arobjects/computer/computer.page.html
+++ b/src/app/arobjects/computer/computer.page.html
@@ -8,5 +8,7 @@
 </ion-header>
 
 <ion-content>
-  <iframe src="../../../assets/ARcontents/computer.html"></iframe>
+  <iframe src="../../../assets/ARcontents/computer.html" allow="camera;"
+
+ ></iframe>
 </ion-content>
