--- a/src/app/arobjects/coyote/coyote.page.html
+++ b/src/app/arobjects/coyote/coyote.page.html
@@ -8,5 +8,6 @@
 </ion-header>
 
 <ion-content>
-  <iframe src="../../../assets/ARcontents/coyote.html"></iframe>
+  <iframe src="../../../assets/ARcontents/coyote.html" allow="camera;"
+  ></iframe>
 </ion-content>
