--- a/src/app/arobjects/forest/forest.page.html
+++ b/src/app/arobjects/forest/forest.page.html
@@ -8,5 +8,6 @@
 </ion-header>
 
 <ion-content>
-  <iframe src="../../../assets/ARcontents/forest.html"></iframe>
+  <iframe src="../../../assets/ARcontents/forest.html" allow="camera;"
+  ></iframe>
 </ion-content>
