--- a/src/app/arobjects/satellite/satellite.page.html
+++ b/src/app/arobjects/satellite/satellite.page.html
@@ -8,5 +8,6 @@
 </ion-header>
 
 <ion-content>
-  <iframe src="../../../assets/ARcontents/satellite.html"></iframe>
+  <iframe src="../../../assets/ARcontents/satellite.html" allow="camera;"
+ ></iframe>
 </ion-content>
