--- a/src/app/arobjects/earth/earth.page.html
+++ b/src/app/arobjects/earth/earth.page.html
@@ -8,5 +8,6 @@
 </ion-header>
 
 <ion-content>
-  <iframe src="../../../assets/ARcontents/earth.html"></iframe>
+  <iframe src="../../../assets/ARcontents/earth.html" allow="camera;"
+  ></iframe>
 </ion-content>
