--- a/src/app/arobjects/house/house.page.html
+++ b/src/app/arobjects/house/house.page.html
@@ -8,5 +8,6 @@
 </ion-header>
 
 <ion-content>
-  <iframe src="../../../assets/ARcontents/house.html"></iframe>
+  <iframe src="../../../assets/ARcontents/house.html" allow="camera;"
+  ></iframe>
 </ion-content>
