--- a/src/app/arobjects/machine/machine.page.html
+++ b/src/app/arobjects/machine/machine.page.html
@@ -8,5 +8,6 @@
 </ion-header>
 
 <ion-content>
-  <iframe src="../../../assets/ARcontents/machine.html"></iframe>
+  <iframe src="../../../assets/ARcontents/machine.html" allow="camera;"
+  ></iframe>
 </ion-content>
