Units list page is created, Added Home Button to every page for easier navigation, Units list retriving from server, Settings Page Created

--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,6 +1,6 @@
-<ion-tabs #tabs>
+<ion-tabs #tabs id="tabs">
 
-  <ion-tab-bar slot="bottom">
+  <ion-tab-bar slot="end">
 
     <ion-tab-button tab="time">
       <ion-icon ios="ios-clock" md="md-clock"></ion-icon>
