--- a/src/app/arobjects/arobjects.page.html
+++ b/src/app/arobjects/arobjects.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar>
+    <ion-button (click)="navigateToUnits()" slot="start"  fill="clear">
+         <ion-icon slot="icon-only" name="home" color="dark" ></ion-icon>
+      </ion-button>
     <ion-title>arobjects</ion-title>
   <ion-buttons slot="end">
       <ion-button (click)="close()"><ion-icon name="close" slot="icon-only"></ion-icon></ion-button>
