--- a/src/app/discuss/discuss.page.html
+++ b/src/app/discuss/discuss.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar>
+    <ion-button (click)="navigateToUnits()" slot="start"  fill="clear">
+         <ion-icon slot="icon-only" name="home" color="dark" ></ion-icon>
+      </ion-button>
     <ion-title>Discussion Board</ion-title>
   </ion-toolbar>
 </ion-header>
