--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,4 +1,6 @@
 <ion-content>
+  <div class="cardcontainer" >
+
   <ion-card>
       <ion-img src="/assets/1.svg">  </ion-img>
     <ion-card-content>
@@ -17,4 +19,5 @@
         <ion-button expand="block" color="dark" (click)="login(email, password)">Login </ion-button>
     </ion-card-content>
   </ion-card>
+  </div>
 </ion-content>
