--- a/src/app/time/time.page.html
+++ b/src/app/time/time.page.html
@@ -1,6 +1,8 @@
 <ion-header>
   <ion-toolbar>
-    <ion-back-button></ion-back-button>
+      <ion-button (click)="navigateToUnits()" slot="start"  fill="clear">
+         <ion-icon slot="icon-only" name="home" color="dark" ></ion-icon>
+      </ion-button>
     <ion-title>Time Tables</ion-title>
     <ion-button slot="end" (click)="today()" color="medium"> Today </ion-button>
   </ion-toolbar>
