'Hault for D2' VR stream needds to be added, Completed: Icon names removed for compatibility issue, Grades and SubmitHere page replaced with AssesmentsPage, Grades buttom removed from Tab bar

--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -4,34 +4,28 @@
 
     <ion-tab-button tab="time">
       <ion-icon ios="ios-clock" md="md-clock"></ion-icon>
-      <ion-label>Schedules</ion-label>
+      <ion-label></ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="learn">
       <ion-icon ios="ios-book" md="md-book"></ion-icon>
-      <ion-label>Materials</ion-label>
+      <ion-label></ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="online">
       <ion-icon  ios="ios-globe" md="md-globe"></ion-icon>
-      <ion-label>Join Class</ion-label>
+      <ion-label></ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="discuss">
       <ion-icon ios="ios-chatboxes" md="md-chatboxes"></ion-icon>
-      <ion-label>Dis. Board</ion-label>
+      <ion-label></ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="submit">
       <ion-icon ios="ios-cloud-upload" md="md-cloud-upload"></ion-icon>
-      <ion-label>Submit Assi.</ion-label>
+      <ion-label></ion-label>
     </ion-tab-button>
-
-    <ion-tab-button tab="grade">
-      <ion-icon ios="ios-trending-up" md="md-trending-up" ></ion-icon>
-      <ion-label>Grades</ion-label>
-    </ion-tab-button>
-
 
   </ion-tab-bar>
 
