Quick Fix for navigation label. labels added again

--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -4,27 +4,27 @@
 
     <ion-tab-button tab="time">
       <ion-icon ios="ios-clock" md="md-clock"></ion-icon>
-      <ion-label></ion-label>
+      <ion-label> Schedule </ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="learn">
       <ion-icon ios="ios-book" md="md-book"></ion-icon>
-      <ion-label></ion-label>
+      <ion-label>Resources</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="online">
       <ion-icon  ios="ios-globe" md="md-globe"></ion-icon>
-      <ion-label></ion-label>
+      <ion-label>Class</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="discuss">
       <ion-icon ios="ios-chatboxes" md="md-chatboxes"></ion-icon>
-      <ion-label></ion-label>
+      <ion-label>Dis. Board</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="submit">
       <ion-icon ios="ios-cloud-upload" md="md-cloud-upload"></ion-icon>
-      <ion-label></ion-label>
+      <ion-label>Assessment</ion-label>
     </ion-tab-button>
 
   </ion-tab-bar>
