Mearning Materials place holders added

--- a/src/app/learn/learn.page.html
+++ b/src/app/learn/learn.page.html
@@ -9,4 +9,29 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content>
+  <ion-list-header> Announcements </ion-list-header>
+  <ion-list>
+    <ion-title> New random announcement </ion-title>
+    <ion-text padding-start="10px;">well Done! Good job. Go ahead, well Done! Good job. Go ahead, well Done! Good job. Go ahead, well Done! Good job. Go ahead </ion-text>
+
+  </ion-list>
+
+  <ion-list-header> Weekly Tasks </ion-list-header>
+  <ion-list>
+    <ion-item>Week 1  <ion-button slot="end" fill="clear"> <ion-icon color="dark" slot="icon-only" name="add" ></ion-icon> </ion-button></ion-item>
+    <ion-item>Week 2  <ion-button slot="end" fill="clear"> <ion-icon color="dark" slot="icon-only" name="add" ></ion-icon> </ion-button></ion-item>
+    <ion-item>Week 3  <ion-button slot="end" fill="clear"> <ion-icon color="dark" slot="icon-only" name="add" ></ion-icon> </ion-button></ion-item>
+    <ion-item>Week 4  <ion-button slot="end" fill="clear"> <ion-icon color="dark" slot="icon-only" name="add" ></ion-icon> </ion-button></ion-item>
+    <ion-item>Week 5  <ion-button slot="end" fill="clear"> <ion-icon color="dark" slot="icon-only" name="add" ></ion-icon> </ion-button></ion-item>
+    <ion-item>Week 6  <ion-button slot="end" fill="clear"> <ion-icon color="dark" slot="icon-only" name="add" ></ion-icon> </ion-button></ion-item>
+    <ion-item>Week 7  <ion-button slot="end" fill="clear"> <ion-icon color="dark" slot="icon-only" name="add" ></ion-icon> </ion-button></ion-item>
+    <ion-item>Week 8  <ion-button slot="end" fill="clear"> <ion-icon color="dark" slot="icon-only" name="add" ></ion-icon> </ion-button></ion-item>
+    <ion-item>Week 9  <ion-button slot="end" fill="clear"> <ion-icon color="dark" slot="icon-only" name="add" ></ion-icon> </ion-button></ion-item>
+    <ion-item>Week 10  <ion-button slot="end" fill="clear"> <ion-icon color="dark" slot="icon-only" name="add" ></ion-icon> </ion-button></ion-item>
+    <ion-item>Week 11  <ion-button slot="end" fill="clear"> <ion-icon color="dark" slot="icon-only" name="add" ></ion-icon> </ion-button></ion-item>
+    <ion-item>Week 12  <ion-button slot="end" fill="clear"> <ion-icon color="dark" slot="icon-only" name="add" ></ion-icon> </ion-button></ion-item>
+  </ion-list>
+
+
+</ion-content>
