--- a/src/app/online/online.page.html
+++ b/src/app/online/online.page.html
@@ -26,7 +26,7 @@
     </ion-card>
     <ion-card color="dark">
         <ion-card-content>
-           <ion-card-title>Live Virtual Class  </ion-card-title>
+           <ion-card-title>Join Session  </ion-card-title>
             <ion-card-subtitle> Join Unit 1 Virtual Class during Regular class times. </ion-card-subtitle>
                 <ion-button color="medium"> Join Session</ion-button>
         </ion-card-content>
