--- a/src/app/units/units.page.scss
+++ b/src/app/units/units.page.scss
@@ -16,16 +16,19 @@ ion-content{
   text-transform: uppercase;
   letter-spacing: 2.5px;
   font-weight: 500;
-  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
+  // box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
   transition: all 0.3s ease 0s;
   cursor: pointer;
   outline: none;
+  // new
+  box-shadow: 0px 10px 15px rgba(127, 140, 141, 1.0);
+  transform: translateY(-3px);
   }
-
-.item:hover {
-
-  background-color: #bdc3c7;
-  box-shadow: 0px 10px 15px rgba(127, 140, 141,1.0);
-  color: rgba(236, 240, 241,1.0);
-  transform: translateY(-5px);
-}
+//
+//.item:hover {
+//
+//  background-color: #bdc3c7;
+//  box-shadow: 0px 10px 15px rgba(127, 140, 141,1.0);
+//  color: rgba(236, 240, 241,1.0);
+//  transform: translateY(-5px);
+//}
