trying different database

--- a/src/app/arobjects/arobjects.page.html
+++ b/src/app/arobjects/arobjects.page.html
@@ -20,7 +20,8 @@
     <ion-button (click)="renderForest()" expand="block" color="medium">Forest</ion-button>
     <ion-button (click)="renderForest3d()" expand="block" color="dark">Another forest</ion-button>
     <ion-button (click)="renderSatellite()" expand="block" color="medium">Satellite</ion-button>
-    <ion-button (click)="renderHouse()" expand="block" color="dark">House</ion-button>
+    <ion-button (click)="renderHouse()" expand="block" color="dark">HIT381</ion-button>
     <ion-button (click)="renderKangaroo()" expand="block" color="medium">Kangaroo</ion-button>
+    <ion-button (click)="renderHuman()" expand="block" color="dark">Skeleton</ion-button>
   </ion-list>
 </ion-content>
