--- a/src/app/online/online.page.html
+++ b/src/app/online/online.page.html
@@ -13,7 +13,7 @@
     <ion-card color="dark">
         <ion-card-content>
            <ion-card-title>Live Virtual Class  </ion-card-title>
-            <ion-card-subtitle> Join Unit 1 Virtual Class during Regular class times. </ion-card-subtitle>
+            <ion-card-subtitle> Live Class is only available during Regular class times. Please refer to class Schedules.  To see class schedules: <ion-button (click)="gotoTimePage()" fill="clear"> Click Here </ion-button>   </ion-card-subtitle>
                <ion-button color="medium">join Virtual Class</ion-button>
         </ion-card-content>
     </ion-card>
