--- a/src/app/time/time.page.html
+++ b/src/app/time/time.page.html
@@ -61,10 +61,10 @@
     <!--Class Schedule end-->
  <ion-card>
 
-    <ion-card-header tappable (click)="collapsCard = !collapsCard" color="medium">
-      <ion-card-title>New Event</ion-card-title>
+    <ion-card-header tappable (click)="collapsCard = !collapsCard" color="dark">
+      <ion-card-title>Add New Event</ion-card-title>
     </ion-card-header>
-    <ion-card-content *ngIf="!collapsCard" >
+    <ion-card-content *ngIf="collapsCard" >
         <ion-item>
           <ion-input type="text" placeholder="Title" [(ngModel)]="event.title" ></ion-input>
         </ion-item>
