--- a/src/app/online/online.page.html
+++ b/src/app/online/online.page.html
@@ -9,6 +9,7 @@
   </ion-toolbar>
 </ion-header>
 
+
 <ion-content>
     <ion-card color="dark">
         <ion-card-content>
@@ -27,13 +28,10 @@
     <ion-card color="dark">
         <ion-card-content>
            <ion-card-title>Join Session  </ion-card-title>
-            <ion-card-subtitle> Join Unit 1 Virtual Class during Regular class times. </ion-card-subtitle>
+            <ion-card-subtitle> Join online session. Supports Most Browser.</ion-card-subtitle>
                 <ion-button color="medium"> Join Session</ion-button>
         </ion-card-content>
     </ion-card>
-
-
-
 
 
 </ion-content>
