--- a/src/app/submit/submit.page.html
+++ b/src/app/submit/submit.page.html
@@ -3,7 +3,7 @@
      <ion-button (click)="navigateToUnits()" slot="start"  fill="clear">
          <ion-icon slot="icon-only" name="home" color="dark" ></ion-icon>
       </ion-button>
-    <ion-title>Submit Assignments</ion-title>
+    <ion-title>Assessments</ion-title>
   </ion-toolbar>
 </ion-header>
 
