--- a/src/app/discuss/discuss.page.html
+++ b/src/app/discuss/discuss.page.html
@@ -8,5 +8,42 @@
 </ion-header>
 
 <ion-content>
+ <div class="container" padding>
+    <div  class="message left">
+      <img class="user-img"  alt="" src="">
+      <div class="msg-detail">
+        <div class="msg-info">
+          <p>sender name</p>
+        </div>
+        <div class="msg-content">
+          <span class="triangle"></span>
+          <p class="line-breaker ">Message Details, non clickable</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container" padding>
+    <div  class="message left">
+      <img class="user-img"  alt="" src="">
+      <div class="msg-detail">
+        <div class="msg-info">
+          <p>sender name</p>
+        </div>
+        <div class="msg-content">
+          <span class="triangle"></span>
+          <p class="line-breaker ">Message details, non clickable</p>
+        </div>
+      </div>
+    </div>
+  </div>
 
+  <ion-footer no-border>
+    <div class="input-wrap">
+      <textarea #messageInput placeholder="Enter your message!" [(ngModel)]="chatMessage" (keyup.enter)="sendMessage()">
+      </textarea>
+      <button ion-button clear icon-only item-right (click)="sendMessage()">
+        <ion-icon name="ios-send" ios="ios-send" md="md-send"></ion-icon>
+      </button>
+    </div>
+  </ion-footer>
 </ion-content>
