--- a/src/app/online/online.page.html
+++ b/src/app/online/online.page.html
@@ -6,6 +6,9 @@
     <ion-title>
      Online Classes
     </ion-title>
+       <ion-button (click)="navigateToHelp()" slot="end" fill="clear">
+         <ion-icon slot="icon-only" name="help-circle" color="dark" ></ion-icon>
+      </ion-button>
   </ion-toolbar>
 </ion-header>
 
