--- a/src/app/submit/submit.page.scss
+++ b/src/app/submit/submit.page.scss
@@ -1,3 +1,11 @@
 ion-content{
    --ion-background-color: #ecf0f1;
 }
+ion-label{
+   padding-left: 30%;
+}
+ion-row{
+   width: auto;
+   height: 60px;
+
+}
