--- a/src/app/units/units.page.scss
+++ b/src/app/units/units.page.scss
@@ -18,11 +18,14 @@ ion-content{
   transition: all 0.3s ease 0s;
   cursor: pointer;
   outline: none;
+  // new
+  box-shadow: 0px 10px 15px rgba(127, 140, 141, 1.0);
+	  transform: translateY(-3px);
   }
 
-.item:hover {
-  background-color: #bdc3c7;
-  box-shadow: 0px 10px 15px rgba(127, 140, 141,1.0);
-  color: rgba(236, 240, 241,1.0);
-  transform: translateY(-5px);
-}
+//.item:hover {
+//  background-color: #bdc3c7;
+//  box-shadow: 0px 10px 15px rgba(127, 140, 141,1.0);
+//  color: rgba(236, 240, 241,1.0);
+//  transform: translateY(-5px);
+//}
