--- a/src/app/help/help.page.html
+++ b/src/app/help/help.page.html
@@ -6,7 +6,7 @@
 </ion-header>
 
 <ion-content>
-
+<div class="cardcontainer" >
   <ion-card>
     <ion-slides pager="false" [options]="slideOpts" [scrollbar]="true">
 
@@ -95,6 +95,6 @@
     </ion-card-content>
   </ion-card>
 
-
+</div>
 
 </ion-content>
