--- a/src/app/help/help.page.html
+++ b/src/app/help/help.page.html
@@ -14,19 +14,55 @@
         <ion-img src="../../assets/android.png"></ion-img>
       </ion-slide>
 
-      <ion-slide>
-       <ion-img src="../../assets/1.svg"></ion-img>
+      <ion-slide class="wrapper">
+       <ion-img src="../../assets/android/batterysettings.jpg"></ion-img>
+        <p>Open Power mode in battery Settings</p>
       </ion-slide>
 
-      <ion-slide>
-      <ion-img src="../../assets/1.svg"></ion-img>
+      <ion-slide class="wrapper">
+      <ion-img src="../../assets/android/powermode.jpg"></ion-img>
+        <p>Change Power Mode to High Performance</p>
       </ion-slide>
+
+       <ion-slide class="wrapper">
+      <ion-img src="../../assets/android/screentimeout10.jpg"></ion-img>
+         <p>Change Screen timeout to 10 min in display Settings</p>
+      </ion-slide>
+
+       <ion-slide class="wrapper">
+      <ion-img src="../../assets/android/lockscreen.jpg"></ion-img>
+         <p>Torn on Always On Display from Lock Screen settings </p>
+      </ion-slide>
+
+       <ion-slide class="wrapper">
+      <ion-img src="../../assets/android/autorotate.jpg"></ion-img>
+         <p>from device dropdown settings turn on Auto Rotate </p>
+      </ion-slide>
+
+       <ion-slide class="wrapper">
+      <ion-img src="../../assets/android/sitesettings.jpg"></ion-img>
+         <p>If asking for camera access, open site settings from browser </p>
+      </ion-slide>
+
+      <ion-slide class="wrapper">
+      <ion-img src="../../assets/android/sitecamera.jpg"></ion-img>
+        <p> Allow the camera access </p>
+      </ion-slide>
+
+       <ion-slide class="wrapper">
+      <ion-img src="../../assets/android/allowcamera.jpg"></ion-img>
+         <p>Tap Allow</p>
+      </ion-slide>
+
     </ion-slides>
 
     <ion-card-content>
-    <ion-card-title>Android Devices</ion-card-title>
-    <ion-card-subtitle>Please follow the instruction shown in the pictures</ion-card-subtitle>
+
+      <ion-card-title>Android Devices</ion-card-title>
+      <ion-card-subtitle>Swipe pictures left - Right </ion-card-subtitle>
+
     </ion-card-content>
+
   </ion-card>
 
   <ion-card>
@@ -36,42 +72,27 @@
         <ion-img src="../../assets/iPhoneT.png"></ion-img>
       </ion-slide>
 
-      <ion-slide>
-       <ion-img src="../../assets/1.svg"></ion-img>
+      <ion-slide class="wrapper">
+       <ion-img src="../../assets/settings.jpeg"></ion-img> <p>Open Display & Brightness from iOS device Settings</p>
       </ion-slide>
 
-      <ion-slide>
-      <ion-img src="../../assets/1.svg"></ion-img>
+      <ion-slide  class="wrapper">
+      <ion-img src="../../assets/autolock.jpeg"></ion-img>  <p> Set AutoLock TO Never </p>
       </ion-slide>
+
+      <ion-slide  class="wrapper">
+      <ion-img src="../../assets/vr.jpg"></ion-img>
+        <p>Tilt your phone, click vr icon then slide it into your VR goggles</p>
+      </ion-slide>
+
     </ion-slides>
 
     <ion-card-content>
     <ion-card-title>iOS Devices</ion-card-title>
-    <ion-card-subtitle>Please follow the instruction shown in the pictures</ion-card-subtitle>
+    <ion-card-subtitle>Swipe pictures left - Right</ion-card-subtitle>
     </ion-card-content>
   </ion-card>
 
-  <ion-card>
-    <ion-slides pager="false" [options]="slideOpts" [scrollbar]="true">
-
-      <ion-slide>
-        <ion-img src="../../assets/safari.png"></ion-img>
-      </ion-slide>
-
-      <ion-slide>
-       <ion-img src="../../assets/1.svg"></ion-img>
-      </ion-slide>
-
-      <ion-slide>
-      <ion-img src="../../assets/1.svg"></ion-img>
-      </ion-slide>
-    </ion-slides>
-
-    <ion-card-content>
-    <ion-card-title>Safari</ion-card-title>
-    <ion-card-subtitle>Please follow the instruction shown in the pictures</ion-card-subtitle>
-    </ion-card-content>
-  </ion-card>
 
   <ion-card>
     <ion-slides pager="false" [options]="slideOpts" [scrollbar]="true">
@@ -80,18 +101,37 @@
         <ion-img src="../../assets/chrome.png"></ion-img>
       </ion-slide>
 
-      <ion-slide>
-       <ion-img src="../../assets/1.svg"></ion-img>
+      <ion-slide class="chrome">
+       <ion-img src="../../assets/browser/error.png"></ion-img>
+        <p>It might show error. Please follow instructions, you will be okay.</p>
       </ion-slide>
 
-      <ion-slide>
-      <ion-img src="../../assets/1.svg"></ion-img>
+      <ion-slide class="chrome">
+       <ion-img src="../../assets/browser/securityP.png"></ion-img>
+        <p> If you are on macOS,Open Security and Privacy and click checkbox For Chrome <br> otherwise Ignore this step</p>
       </ion-slide>
+
+      <ion-slide class="chrome">
+       <ion-img src="../../assets/browser/searchcamera.png"></ion-img>
+        <p>Open browser settings and search for camera</p>
+      </ion-slide>
+
+      <ion-slide class="chrome">
+       <ion-img src="../../assets/browser/allowcamera.png"></ion-img>
+        <p>Turn on camera access from site camera settings</p>
+      </ion-slide>
+
+      <ion-slide class="chrome">
+       <ion-img src="../../assets/browser/finally.png"></ion-img>
+        <p>Tap Allow</p>
+      </ion-slide>
+
+
     </ion-slides>
 
     <ion-card-content>
     <ion-card-title>Chrome</ion-card-title>
-    <ion-card-subtitle>Please follow the instruction shown in the pictures</ion-card-subtitle>
+    <ion-card-subtitle>Swipe pictures left - Right</ion-card-subtitle>
     </ion-card-content>
   </ion-card>
 
