--- a/src/app/arobjects/human/human.page.html
+++ b/src/app/arobjects/human/human.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Human</ion-title>
+    <ion-title>Human Skeleton</ion-title>
    <ion-buttons slot="end">
       <ion-button (click)="close()"><ion-icon name="close" slot="icon-only"></ion-icon></ion-button>
     </ion-buttons>
