--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -10,7 +10,7 @@
       <ion-list>
         <ion-item>
           <ion-label position="stacked"> Student Email: </ion-label>
-          <ion-input placeholder="s123456789@students.cdu.edu.au" type="text" [(ngModel)]="email">  </ion-input>
+          <ion-input placeholder="e.g: s123456789@students.cdu.edu.au" type="text" [(ngModel)]="email">  </ion-input>
         </ion-item>
         <ion-item>
           <ion-label position="stacked">Password:</ion-label>
