--- a/src/app/online/online.page.html
+++ b/src/app/online/online.page.html
@@ -6,8 +6,9 @@
     <ion-title>
      Online Classes
     </ion-title>
-       <ion-button (click)="navigateToHelp()" slot="end" fill="clear">
-         <ion-icon slot="icon-only" name="help-circle" color="dark" ></ion-icon>
+       <ion-button (click)="navigateToHelp()" slot="end" fill="clear" color="dark">
+           Help
+         <ion-icon name="help-circle" color="dark" ></ion-icon>
       </ion-button>
   </ion-toolbar>
 </ion-header>
