--- a/src/app/arobjects/arobjects.page.html
+++ b/src/app/arobjects/arobjects.page.html
@@ -10,30 +10,40 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <div class="cardcontainer">
-    <ion-card >
-       <ion-img src="../../assets/marker.png" ></ion-img>
+<ion-content padding>
+    <ion-card class="cardcontainer">
+       <ion-img src="../../assets/marker1.png" ></ion-img>
       <ion-card-title padding> Point you camera to the logo</ion-card-title>
       <ion-card-content>
         <ion-text>
-          Please Download this marker image and print a copy. Later point you camera to the marker to see 3D models in Augmented Reality View
+          Please Download this marker image and print a copy. Later point you camera (while using Android Phone) to the marker to see 3D models in Augmented Reality View
         </ion-text>
       </ion-card-content>
       <ion-button slot="end" fill="clear"> <a href="./../assets/marker1.png" target="_blank"> Download Logo</a> </ion-button>
     </ion-card>
- </div>
+         <p>Click here to change between device functions of Android and iOS</p>
+    <ion-segment tappable (click)="alive = !alive">
+        <ion-segment-button> Change Device Type </ion-segment-button>
+    </ion-segment>
+      <ion-list *ngIf="alive">
+        <ion-list-header class="android"> I'm On Android Phone </ion-list-header>
+          <p> Click the images below </p>
+                <ion-button (click)="renderBird()" class="buttonimage" expand="clear"> <ion-img src="../../../assets/bird.png"   ></ion-img> </ion-button>
+                <ion-button (click)="renderDino()" class="buttonimage" expand="clear"> <ion-img src="../../../assets/dino.png"   ></ion-img> </ion-button>
+                <ion-button (click)="renderHuman()" class="buttonimage" expand="clear"> <ion-img src="../../../assets/skeleton.png"  ></ion-img> </ion-button>
 
-  <ion-list>
-    <ion-list-header> Click Any of these 3D models </ion-list-header>
+      </ion-list>
+
+    <ion-list *ngIf="!alive">
+        <ion-list-header class="iphone" color="primary"> I'm On iPhone</ion-list-header>
+
+            <a rel="ar" href="../../assets/ARcontents/bird/CactusWren.usdz" padding><img src="../../assets/bird.png" class="buttonimage" padding></a>
+
+            <a rel="ar" href="../../assets/ARcontents/dinosor/Megapnosaurus.usdz" padding><img src="../../assets/dino.png" class="buttonimage" padding></a>
+
+            <a rel="ar" href="../../assets/ARcontents/skeleton/skeleton.usdz" padding><img src="../../assets/skeleton.png" class="buttonimage" padding></a>
+
+    </ion-list>
 
 
-    <ion-button (click)="renderCoyote()" expand="block" color="medium">Coyote</ion-button>
-    <ion-button (click)="renderEarth()" expand="block" color="dark">Earth</ion-button>
-    <ion-button (click)="renderForest()" expand="block" color="medium">Forest</ion-button>
-    <ion-button (click)="renderForest3d()" expand="block" color="dark">Another forest</ion-button>
-    <ion-button (click)="renderSatellite()" expand="block" color="medium">Satellite</ion-button>
-    <ion-button (click)="renderKangaroo()" expand="block" color="medium">Kangaroo</ion-button>
-    <ion-button (click)="renderHuman()" expand="block" color="dark">Skeleton</ion-button>
-  </ion-list>
 </ion-content>
